# alters-lab

./: .claude-P1-001.md  .claude-P1-002.md  .claude-P1-003.md  .claude-P1-012.md  .claude-p2-001.md  .claude-p2-002.md  .claude-p2-003.md  .claude-p2-004.md  .claude-p2-005.md  .claude-p2-005r.md  .claude-p2-005r2.md  .claude-p3-000.md  .claude-p3-001.md  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROMOTION.md  README.md  chatgpt_relay.py  docker-compose.yml  docker-entrypoint.sh
apps/api/: README.md  pyproject.toml
apps/api/scripts/: export_openapi.py
apps/api/src/alters_lab/: __init__.py  errors.py  logging_config.py  main.py  middleware.py
apps/api/src/alters_lab/api/: action_alignment.py  alter_dialogue.py  alter_recommendation.py  alters.py  archive_mechanism.py  behavior_metric_trend.py  behavior_metrics.py  behavior_validation.py  branch_base_rate_anchor.py  branch_forecast.py  branch_outcome_targets.py  branches.py  calibration_conversation.py  calibration_divergence.py  calibration_loop.py  calibration_scorecard.py  (+42 more)
apps/api/src/alters_lab_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/api/tests/: conftest.py  test_active_yaml_loader.py  test_alter_dialogue.py  test_alter_dialogue_api.py  test_alter_rubric_baseline.py  test_alters_persist.py  test_alters_persist_api.py  test_archive_mechanism.py  test_archive_mechanism_api.py  test_behavior_metric_trend.py  test_behavior_metrics_api.py  test_behavior_metrics_catalog.py  test_behavior_metrics_schema.py  test_behavior_metrics_storage.py  test_branch_base_rate_anchor.py  test_branch_forecast.py  test_branch_milestone_validation.py  test_branch_milestones_storage.py  test_branch_outcome_targets.py  test_branches_persist.py  test_branches_persist_api.py  test_calibration_conversation.py  test_calibration_divergence.py  test_calibration_loop.py  test_calibration_loop_api.py  test_calibration_scorecard.py  test_checkpoint_regeneration.py  test_checkpoint_regeneration_api.py  test_cycle_summary_api.py  test_data_repo.py  test_data_safety.py  test_day30_harness.py  test_deb_package_build.py  test_draft_review.py  test_draft_review_api.py  test_dynamic_weight.py  test_evidence_reports_api.py  test_external_evidence.py  test_forecast_evaluation.py  test_forecast_snapshot.py  (+82 more)
(+578 files in other folders)
