[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alters-lab-api"
version = "0.1.0"
description = "Alters Lab — personal future-branch simulation and calibration system"
readme = "../../README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic",
    "pyyaml",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "uvicorn",
]

[project.scripts]
alters-lab = "alters_lab.cli:main"

[project.urls]
Homepage = "https://github.com/Igzela/alters-lab"
Repository = "https://github.com/Igzela/alters-lab"
Documentation = "https://github.com/Igzela/alters-lab/tree/main/docs"
Issues = "https://github.com/Igzela/alters-lab/issues"

[tool.setuptools.packages.find]
where = ["src"]
