[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alters-lab-api"
version = "0.1.0"
description = "Alters Lab — personal future-branch simulation and calibration system"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.10,<3.0",
    "pyyaml>=6.0,<7.0",
    "uvicorn>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10.0",
    "httpx>=0.28,<1.0",
    "uvicorn>=0.34,<1.0",
]
lab = [
    "pyreadstat>=1.2,<2.0",
]

[project.scripts]
alters-lab = "alters_lab.cli:main"

[project.urls]
Homepage = "https://github.com/Igzela/alters-lab"
Repository = "https://github.com/Igzela/alters-lab"
Documentation = "https://github.com/Igzela/alters-lab/tree/main/docs"
Issues = "https://github.com/Igzela/alters-lab/issues"

[tool.setuptools.packages.find]
where = ["src"]
